--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc && cp ./package.json ./dist",
+    "build": "tsc && copyfiles .env dist",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -39,6 +39,7 @@
     "@types/node": "^22.18.10",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
