--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
+
 {
   "compilerOptions": {
-    "target": "ES2021",
-    "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
-    "strict": true,
+    "target": "ES2020",
+    "module": "CommonJS",
+
+   
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "strict": true,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src", "src/@types/**/*.d.ts"],
-  "exclude": ["node_modules", "dist", "test"]
+ 
 }
