--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,13 @@
-
 {
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ],
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-
-   
-    "esModuleInterop": true,
-    "strict": true,
-    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
-  },
- 
+  }
 }
